== 1.2.2

    Bugfixes:
    --------
    + Fixed issue with adding domain groups;
    + Fixed sorting and pagination issue on address table;
    + Fixed incorrect top subnets percentage graph;

== 1.2.1

	Enhancements:
	----------------------------
	+ French translation updated to verson 1.2;
	+ German translation updated to verson 1.2;

    Bugfixes:
    --------
    + Fixed upgrade bug that selected invalid auth method for AD/LDAP users;
    + Fixed LDAP problems after 1.2 upgrade;
    + Fixed PowerDNS Slave with multiple masters delimiter error;
    + Fixed owerDNS PTR records not being updated automatically;
    + Fixed csrf cookie bug when editing folder;
    + Fixed csrf cookie bug when truncationg subnet;
    + Fixed invalid code for API crypt method;
    + Fixed strange headings font display in Firefox;
    + Fixed invalid proxy settings in config.dist.php;
    + Fixed search same hostnames in db link form address table;
    + Fixed import subnet bug caused by fw object;
    + Fixed Subnet Import (Preview button > no action);

	Security Fixes:
	----------------------------
	+ Fixed security issues introduced in 1.2;

== 1.20

	New features:
	------------
	+ Added multiple simultaneous authentication methods (Apache, AD, LDAP, Radius, NetIQ);
	+ Added fping scanning support;
	+ Added selectable scanning type (ping/pear/fping);
	+ Added L2 domains;
	+ Added option to define address as default GW for subnet;
	+ Added customizable address tags with compressed option;
	+ Added temporary subnet / address shares;
	+ Added quick subnet masks;
	+ Added nameserver sets per subnets (jonashauge);
	+ Added optional syslog as log location;
	+ REST API:
		+ documentation: http://phpipam.net/api-documentation/
		+ API v2, old v1 support added
		+ Complete rewrite of all API calls;
		+ New security models (crypt, ssl, none);
		+ Support for custom fields;
		+ JSON / XML output
		+ Full read/write controllers (Sections, Subnets/Folders, Addresses, Vlans, Vrfs);